objects/LMS_Outbound_Msg_Queue__c.object
<CustomObject>
    <description>Used in outbound LMS integration process. Queues messages when a Service Contract is created or updated.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMS Outbound Msgs Queue</relationshipLabel>
        <relationshipName>LMS_Outbound_Msgs_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Failure Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Id__c</fullName>
        <formula>Account__r.Legacy_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LMS Outbound Msg Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Legacy_Account_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Failure_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>Avtex</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Legacy_Account_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Failure_Count__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Hosted Services</value>
        </filters>
        <label>My View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LMSQ-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Outbound Msgs Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>